<resources>
    <string name="app_name">INDICIA</string>
    <string name="title_home">Home</string>
    <string name="title_disease_predictor">Predictor</string>
    <string name="title_chatbot">ChatBot</string>
    <string name="title_settings">Settings</string>
    <string name="title_finder">Finder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
